--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -37,7 +37,15 @@ jobs:
         unzip chromedriver.zip
         sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
         sudo chmod +x /usr/local/bin/chromedriver
-
+        
+      # 3️⃣ 前回のアーティファクトをダウンロード
+    - name: Download previous artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: result_file
+        path: previous_result
+      continue-on-error: true
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -48,3 +56,10 @@ jobs:
 
     - name: Run scraper
       run: python main_scrape.py
+      
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: result_file
+        path: result_name_madori.txt
+        retention-days: 30
