--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,19 +1,16 @@
-name: JKK Scraper (with Cache Update)
+name: JKK Scraper (cache-safe)
+concurrency:
+  group: jkk-scraper
+  cancel-in-progress: true
 
 on:
-  # schedule:
-  #   - cron: '*/5 23 * * *'
-  #   - cron: '*/5 0-15 * * *'
   workflow_dispatch:
+  # schedule:
+  #   - cron: '*/5 0-15 * * *'
 
 jobs:
-  # ----------------------------
-  # ① ジョブ1：スクレイピング＋ファイル生成
-  # ----------------------------
   scrape:
     runs-on: ubuntu-latest
-    outputs:
-      changed: ${{ steps.scraper.outputs.changed }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,73 +20,35 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Chrome & ChromeDriver
-        run: |
-          sudo apt update
-          sudo apt install -y google-chrome-stable unzip curl jq
-          CHROME_VERSION=$(google-chrome --version | grep -oE '[0-9]+(\.[0-9]+){3}' | cut -d '.' -f 1)
-          DRIVER_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json" \
-            | jq -r --arg v "$CHROME_VERSION" '.versions[] | select(.version | startswith($v + ".")) | .version' | head -n 1)
-          DRIVER_URL=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/known-good-versions-with-downloads.json" \
-            | jq -r --arg v "$DRIVER_VERSION" '.versions[] | select(.version == $v) | .downloads.chromedriver[] | select(.platform=="linux64").url')
-          curl -Lo chromedriver.zip "$DRIVER_URL"
-          unzip chromedriver.zip
-          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install selenium beautifulsoup4 requests jq
-
-      - name: Restore previous result cache
-        id: restore-cache
+      - name: Restore previous cache
+        id: restore
         uses: actions/cache/restore@v4
         with:
           path: previous_result.txt
           key: previous-result
           restore-keys: |
-            previous-result
+            previous-result-
 
       - name: Run scraper
-        id: scraper
-        run: |
-          python main_scrape4.py
-          echo "changed=true" >> $GITHUB_OUTPUT
+        run: python main_scrape4.py
 
-      # ✅ 次のジョブへ渡すためファイルをアップロード
-      - name: Upload previous_result.txt
-        if: always()
+      - name: Upload file to artifact
         uses: actions/upload-artifact@v4
         with:
           name: previous_result
           path: previous_result.txt
 
-  # ----------------------------
-  # ② ジョブ2：キャッシュを上書き更新
-  # ----------------------------
   update-cache:
     runs-on: ubuntu-latest
     needs: scrape
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # ✅ 前のジョブからファイルをダウンロード
-      - name: Download previous_result.txt
+      - name: Download file from artifact
         uses: actions/download-artifact@v4
         with:
           name: previous_result
 
-      - name: Verify file exists
-        run: |
-          echo "📄 File list:"
-          ls -l
-          cat previous_result.txt || echo "⚠️ previous_result.txt not found"
-
-      # ✅ キャッシュを上書き保存
       - name: Save updated cache
         uses: actions/cache/save@v4
         with:
           path: previous_result.txt
-          key: previous-result
+          key: previous-result-${{ github.run_id }}
