--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true  # ← これが重要
 
       - name: Setup Python
         uses: actions/setup-python@v4
