--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -53,11 +53,11 @@ jobs:
       - name: Run scraper
         run: python main_scrape2.py
 
-      - name: Upload page_source
-        uses: actions/upload-artifact@v4
-        with:
-          name: page_source
-          path: |
-            page_source.html
-            page_text.txt
+      #- name: Upload page_source
+      #  uses: actions/upload-artifact@v4
+      #  with:
+      #    name: page_source
+      #    path: |
+      #      page_source.html
+      #      page_text.txt
 
